--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-nodejs-codechallenge",
+  "name": "codechallenge",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
