--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -23,8 +23,9 @@
     "@codechallenge/config": "*",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.3.8",
     "@nestjs/platform-express": "^10.0.0",
+    "dotenv": "^16.4.5",
+    "http-proxy-middleware": "^3.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
