feat: dockerized application

--- a/packages/database/.env.example
+++ b/packages/database/.env.example
@@ -1,2 +1,2 @@
 # Database Connection String
-DATABASE_URL="postgresql://johndoe:mypassword@localhost:5432/mydb"
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
