--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.7"
 services:
-  # postgres:
-  #     image: postgres:14
-  #     ports:
-  #         - "5432:5432"
-  #     environment:
-  #         - POSTGRES_USER=postgres
-  #         - POSTGRES_PASSWORD=postgres
+  postgres:
+    image: postgres:14
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
 
   zookeeper:
     image: confluentinc/cp-zookeeper:5.5.3
@@ -27,3 +27,26 @@ services:
       KAFKA_JMX_PORT: 9991
     ports:
       - 9092:9092
+
+  api-gateway:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+      target: api-gateway
+    depends_on: [kafka]
+    ports:
+      - 3000:3000
+
+  transactions:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+      target: transactions
+    depends_on: [api-gateway]
+
+  anti-fraud:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+      target: anti-fraud
+    depends_on: [api-gateway]
