--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -36,6 +36,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "jest-mock-extended": "^3.0.7",
-    "prisma": "^5.14.0"
+    "prisma": "^5.14.0",
+    "@prisma/client": "^5.14.0"
   }
 }
