--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -14,13 +14,17 @@
     "db:migrate": "prisma migrate dev",
     "db:migrate:raw": "prisma migrate dev --create-only",
     "db:validate": "prisma validate",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
@@ -29,16 +33,17 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest-mock-extended": "^3.0.7",
     "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "prisma": "^5.14.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "jest-mock-extended": "^3.0.7",
-    "prisma": "^5.14.0"
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
+  },
+  "prisma": {
+    "seed": "ts-node src/seed.ts"
   }
 }
